# theme-apply

./: CMakeLists.txt  abstracttask.cpp  abstracttask.h  icontask.cpp  icontask.h  main.cpp  mousethemetask.cpp  mousethemetask.h  wallpapertask.cpp  wallpapertask.h  wmthemetask.cpp  wmthemetask.h
